# hsrs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cabal.project.freeze  chs.cabal  flake.nix  hsrs.cabal
app/: Add.chs  Main.hs
hs/: Add.chs  Lib.chs  Main.hs  Point.chs
rs/: lib.rs
